<resources>
    <string name="app_name">RandomGoals</string>
    <string name="btn_goals_edit_main">Edit Goals</string>
    <string name="to_add_new_goal">Add new Goal</string>
    <string name="image_edit_desc">Image</string>
    <string name="edit_item_goal">EditItemGoal</string>
    <string name="start_random">Start Random</string>
    <string name="hint_list_name">List name:</string>
    <string name="hint_item_list_name">Item list name:</string>
    <string name="desc_add_new_item_to_list">add new item to list</string>
    <string name="desc_icon_new_item_goal">Icon new item goal</string>
    <string name="desc_edit_for_lists_goals">Edit for lists goals</string>
    <string name="desc_icon_chosen_goal">Icon choosed goal</string>
    <string name="desc_started_random_image">Started random image</string>
    <string name="save_list_goals_item_menu">Save list goals</string>
    <string name="delete_item_goal">delete item goal</string>
    <string name="dialog_choose_icons">Choose icon for goals</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="desc_icon_dialog_first">First Icon Dialog</string>
    <string name="desc_second_icon_dialog">Second Icon Dialog</string>
    <string name="desc_third_icon_dialog">Third Icon Dialog</string>
    <string name="name">Name</string>
    <string name="desc_chose_icon_for_list">Chose icon for list</string>
    <string name="desc_icon_for_gaols">Icon for goals</string>
    <string name="choose_goal_icon">Choose goal icon</string>
    <string name="mtv_choose_list">Choose list:</string>
    <string name="to_list_goals">To list goals</string>
    <string name="error_name_already_exist">Такое название уже существует…</string>
    <string name="default_parent_list_name">Новый список</string>
    <string name="title_create_parent_list">Создание</string>
    <string name="title_edit_parent_list">Редактирование</string>
    <string name="error_input_name_for_parent_list">Введите название списка</string>
    <string name="error_input_name_goal">Введите название цели</string>
    <string name="error_no_items">Список пуст…</string>
    <string name="hint_choose_goals_list">Список целей</string>
    <string name="text_get_goal">Get Goal</string>
    <string name="error_try_again">Попробуйте еще раз</string>
    <string name="error_not_choosed_list">Выберите список</string>
</resources>
