<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeIconDialog"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_width="70dp"
    android:layout_height="80dp"
    android:layout_marginBottom="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/colorLight_1">

    <TextView
        android:id="@+id/tvTagIconInDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/ivIconInDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTagIconInDialog"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_icon_dialog_first"
        android:src="@drawable/ic_purpose" />

    <ImageView
        android:id="@+id/ivChoseIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc_chose_icon_for_list" />
</RelativeLayout>
