<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.views.EditItemsListActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/editCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNameListGoals"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/hint_list_name"
                    android:textSize="22sp"
                    android:hint="@string/hint_list_name"
                    android:inputType="text" />
                <ImageView
                    android:id="@+id/ivCurrentIconList"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart = "22dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="ivChooseIconForListGoals"
                    android:layout_toEndOf="@+id/etNameListGoals"
                    android:contentDescription="@string/desc_icon_new_item_goal"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNameNewGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/addNewItemToListImgBtn"
                    android:layout_marginEnd="75dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:textSize="22sp"
                    android:autofillHints="@string/hint_item_list_name"
                    android:hint="@string/hint_item_list_name"
                    android:inputType="text" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addNewItemToListImgBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="3dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="6dp"
                    app:borderWidth="0dp"
                    app:fabSize="normal"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="addNewItemGoalToDB"
                    app:srcCompat="@drawable/add_6" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEditGoals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editCardView"
        android:layout_alignBottom="@+id/editCardView"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp" />
</RelativeLayout>