<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.fragments.EditParentListFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/editCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutParentName"
                    style="@style/Widget.MyTextInputLayout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_list_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textIETNameListGoals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivEditParentIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="22dp"
                    android:layout_toEndOf="@+id/textLayoutParentName"
                    android:clickable="true"
                    android:contentDescription="@string/desc_icon_new_item_goal"
                    android:focusable="true"
                    android:src="@drawable/ic_purpose" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textILNameNewGoal"
                    style="@style/Widget.MyTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/fabAddGoalToParentList"
                    android:hint="@string/hint_item_list_name"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="50dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textIETNameNewGoal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabAddGoalToParentList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/orange_primary"
                    app:maxImageSize="32dp"
                    app:srcCompat="@drawable/add_1" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEditGoals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_below="@+id/editCardView"
        android:layout_alignBottom="@+id/editCardView"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp" />

    <ImageView
        android:id="@+id/ivHolderGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/editCardView"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />
</RelativeLayout>